--- a/headpage/index.html
+++ b/headpage/index.html
@@ -5,18 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head Page</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 </head>
 <body>
-    <div class="title">
-    <div class="left">
-    <p>Image Converter</p> 
-    </div>
-    <div class="right">
-        <a>Login</a>
-        <a>Sign Up</a>
-        <a>Upload</a>
-        <a>About</a>
-    </div>
+    <div class="navbar">
     </div>  
     <div class="banner">
         <div class="content">
@@ -31,5 +23,11 @@
             <img src="../images/pexels-dio-hasbi-saniskoro-3280130.jpg">
         </div>
     </div>
+    <!-- script to include navbar -->
+    <script>
+        $(function(){
+          $(".navbar").load("../nav.html");
+        });
+    </script>
 </body>
 </html>
