Hover effect added.

--- a/nav.html
+++ b/nav.html
@@ -2,8 +2,9 @@
     <p>Image Converter</p> 
     </div>
     <div class="right">
-        <a>Login</a>
-        <a>Sign Up</a>
-        <a>Upload</a>
-        <a>About</a>
+        <div class="redirect"><a>Login</a></div>
+        <div class="redirect"><a>Sign Up</a></div>
+        <div class="redirect"><a>Upload</a></div>
     </div>
+<script>
+</script>
