--- a/headpage/index.html
+++ b/headpage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head Page</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="navbar">
@@ -25,6 +25,9 @@
     </div>
     <!-- script to include navbar -->
     <script>
+        $(function(){
+            console.log("jquery has loaded");
+        });
         $(function(){
           $(".navbar").load("../nav.html");
         });
