Login and Signup updated.

--- a/headpage/index.html
+++ b/headpage/index.html
@@ -17,7 +17,7 @@
         <p>Sign up today to experience our top services designed to bring you the best experience.</p>
         <br>
         <br>
-        <p class="signupbutton">Sign Up</p>
+        <a href="../signuppage/signup.html" class="signupbutton">Sign Up</a>
         </div>
         <div class="img">
             <img src="../images/pexels-dio-hasbi-saniskoro-3280130.jpg">
