--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,9 @@
 <div class="left">
-    <p>Image Converter</p> 
+    <a href="../headpage/index.html">Image Converter</p> 
     </div>
     <div class="right">
-        <div class="redirect"><a>Login</a></div>
-        <div class="redirect"><a>Sign Up</a></div>
+        <div class="redirect"><a href="../loginpage/login.html">Login</a></div>
+        <div class="redirect"><a href="../signuppage/signup.html">Sign Up</a></div>
         <div class="redirect"><a>Upload</a></div>
     </div>
 <script>
