--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -22,7 +22,7 @@
                     <label for="">Password</label>
                 </div>
                 <div class="remember">
-                    <label for=""><input type="checkbox">  Remember me</label>    
+                    <label><input type="checkbox">  Remember me</label>    
                 </div>
                 <button type="submit">Login</button>   
                 <div class="signup-link">
