--- a/signuppage/signup.html
+++ b/signuppage/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar"></div>
     <div class="wrapper">
-        <div class="form-wrapper signin">
+        <div class="form-wrapper sign-up">
             <form action="">
                 <h2>Sign Up</h2>
                 <div class="input-group">
@@ -18,7 +18,7 @@
                     <label for="">Username</label>
                 </div>
                 <div class="input-group">
-                    <input type="text" required>
+                    <input type="email" required>
                     <label for="">Email</label>
                 </div>
                 <div class="input-group">
@@ -26,11 +26,11 @@
                     <label for="">Password</label>
                 </div>
                 <div class="remember">
-                    <label for=""><input type="checkbox">   I agree to the terms and conditions</label>    
+                    <label><input type="checkbox">   I agree to the terms & conditions</label>    
                 </div>
                 <button type="submit">Sign Up</button>   
                 <div class="signup-link">
-                    <p>Already have an account? <a href="../loginpage/login.html" class="signup-link">Login</a> </p>
+                    <p>Already have an account? <a href="../loginpage/login.html" class="signInBtn-link">Sign In</a> </p>
                 </div>      
             </form>
         </div>
