--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
     <div class="right">
         <div class="redirect"><a href="../loginpage/login.html">Login</a></div>
         <div class="redirect"><a href="../signuppage/signup.html">Sign Up</a></div>
-        <div class="redirect"><a>Upload</a></div>
+        <div class="redirect"><a href="../uploadpage/upload.html">Upload</a></div>
     </div>
 <script>
 </script>
