--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -21,9 +21,9 @@
                     <input type="password" required>
                     <label for="">Password</label>
                 </div>
-                <div class="remember">
+                <!-- <div class="remember">
                     <label for=""><input type="checkbox">  Remember me</label>    
-                </div>
+                </div> -->
                 <button type="submit">Login</button>   
                 <div class="signup-link">
                     <p>Don't have an account? <a href="../signuppage/signup.html" class="signup-link">Sign Up</a> </p>
